# NEURO

./: .gitignore  LICENSE  README.md  asd.md  neuro.py  pyproject.toml  requirements.txt  setup.py
docs/: GETTING_STARTED.md  README.md  best_practices.md  examples.md  faq.md  getting_started.md  index.md  language_guide.md  pytorch_integration.md
docs/compiler-internals/: lexer.md  overview.md  parser.md  type_checker.md
docs/getting-started/: first-steps.md  installation.md
docs/language/: basics.md
docs/language-reference/: syntax.md
docs/reference/: language-spec.md
examples/: README.md  advanced_neural_network.nr  basic_type_inference.nr  constraint_solving.nr  convolutional_network.nr  custom_layer.nr  hello_world.nr  minimal.nr  model_branching.nr  neural_network.nr  sequence_data.nrm  sequence_model.nr  sequence_test.nrm  simple_neural_network.nr  struct_demo.nr  test_data.nrm  training_data.nrm  transfer_learning.nr  type_errors.nr
examples/advanced/: branching.nr  callbacks.nr  custom_layer.nr
examples/basics/: classification.nr  function_type_inference.nr  hello_world.nr  minimal.nr  regression.nr  tensor_operations.nr  variables.nr
examples/cnn/: simple_cnn.nr
examples/computer_vision/: custom_cnn.nr  mnist.nr  transfer.nr
examples/data/: dummy_binary_classification.nrm  dummy_multiclass_images.nrm  load_split.nr
examples/deployment/: export.nr  optimize.nr  serve.nr
examples/mlp/: simple_mlp.nr
examples/nlp/: sentiment.nr  sequence.nr
examples/training/: train_cnn_with_validation.nr  train_mlp.nr
examples/types/: type_checking_demo.nr
implementation_checklist/: neuro_implementation_checklist.txt
src/: __init__.py  ast.py  builtins.py  debugger.py  errors.py  interpreter.py  layers.py  lexer.py  losses.py  matrix.py  memory.py  models.py  neuro.py  neuro_ast.py  neuro_types.py  optimizers.py  parser.py  repl.py  syntax_highlighter.py  type_checker.py
src/neuro/: __init__.py  ast_nodes.py  compiler.py  errors.py  lexer.py  main.py  parser.py  type_checker.py
tests/: test_all_examples.py  test_examples.py  test_integration.py  test_lexer.py  test_parser.py  test_type_checker.py
