[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-lang"
version = "0.1.0-alpha"
description = "NEURO Programming Language - A language designed for AI development (ALPHA VERSION)"
readme = "README.md"
authors = [
    { name = "NEURO Development Team" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
keywords = ["ai", "machine learning", "programming language", "alpha", "experimental"]
dependencies = [
    "ply>=3.11",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.1",
    "tqdm>=4.65.0",
    "pygments>=2.15.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.scripts]
neuro = "src.neuro:main"

[tool.setuptools]
packages = ["src"]

[project.urls]
"Homepage" = "https://github.com/PanzerPeter/NEURO"
"Bug Tracker" = "https://github.com/PanzerPeter/NEURO/issues"
"Documentation" = "https://github.com/PanzerPeter/NEURO#readme"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
multi_line_output = 3 